--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "11.1.0",
+    "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
