--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
-    "next": "11.1.0",
+    "next": "^11.1.0",
     "nprogress": "^0.2.0",
     "popper.js": "^1.16.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
